test/expected/explain_f_v=default.out
explain void f() = default
             ^
14: error: "default" can be used only for special member functions and relational operators
